# runtime

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  constraints.txt  pyproject.toml  report_fp8.md  scrub.py  setup.cfg
.github/workflows/: claude-review.yml  gemini-pr-review.yml  tests.yml  workflow.yml
benchmarks/: README.md  _smoke_harness.py
benchmarks/biotech/: fetch.py  harness.py  optimize.py  sanity.py  spec.md
benchmarks/edge/: build_manifest.py  datasets_proposal.md  harness.py  kitti_source.py  nuscenes_source.py  run_edge_speeds.sh  spec.md
benchmarks/hft/: HFT_HEADROOM_TOOLS.md  HFT_TASK_TOOLS.md  datasets.md  gen_manifest.py  generate.py  generator_comparison.md  gpu_generator.py  harness.py  headroom_kernel_rank.py  hft_baseline_1.nsys-rep  hft_library.yaml  manifest.yaml  measure_compression.py  parse_shard_profiles.py  profile_per_shard.sh  results.md  spec.md  test_gpu_generator.py  test_hawkes_gpu.py  test_rng_speed.py
benchmarks/kitti/: results.md  spec.md
benchmarks/overhead/: measure_overhead.py  overhead.md
deploy/k8s/: operator.yaml
docs/: autoresearch.md  customer-intake.md  invariants.md  kernel_identity.md  safety.md  vllm_decode_runbook.md
evidence/: VERIFICATION.md  memray_summary.txt  mutmut_results.txt  perf.json  real_fixture_report.md
gitm/: __init__.py  _paths.py  api.py  cli.py  cuda_env.py  runtime_driver.py  workloads.py
gitm/agents/: autoresearch.py  policy.py
gitm/bench/: manifest.py  profile.py  reproduce.py  results.py
gitm/deploy/: __init__.py  attach.py
gitm/importers/: __init__.py  _common.py  analyze.py  detect.py  node_rollup.py  nsys.py  torch_trace.py
gitm/kernels/: __init__.py  library.py  library.yaml  spec.py
gitm/optimizer/: __init__.py  apply.py  attribution.py  collective_signal.py  deviation.py  dr.py  headroom.py  headroom_kernel_rank.py  invariants.py  measure.py  metrics.py  monitor.py  multibasis.py  preconditions.py  qualification.py  replay.py  replay_validation.py  report.py  scheduler_attribution.py  verification_export.py  vllm_knobs.py
gitm/planner/: __init__.py  context.py  graph.py  hft_graph.py  hft_residual_demo.py  kitti_graph.py  roofline.py
harness/: build_edge_yaml_manifest.py  fill_results.py  gen_kitti_manifest.py  parity_import.sh  pod_setup_and_run.sh  setup_openpcdet.sh  verify_manifest.py
scripts/: bench_analyze.py  demo_improve_gpu.py  fp8_ab.py  fp8_kv.py  gpu_setup.sh  run_on_real_trace.py  run_under_runtime.py  run_vllm_optimize.py  ship_to_pod.sh  verify_infra.sh
skills/: gitm-context-store.md  gitm-internal-status-loop.md
tests/: conftest.py  test_apply_rollback.py  test_audit_log.py  test_autoresearch.py  test_bench_datasets.py  test_catalog_unify.py  test_cli_attach.py  test_collective_signal.py  test_cuda_env.py  test_deploy_manifests.py  test_deviation_alignment.py  test_edge_optimize.py  test_gate_wiring.py  test_headroom.py  test_hft_intervention.py  test_hft_optimize.py  test_importers.py  test_importers_fuzz.py  test_importers_hypothesis.py  test_injection.py  test_kitti_benchmark.py  test_knobs_via_restart.py  test_metrics.py  test_node_rollup_math.py  test_nvtx_correlate.py  test_openfold_workload.py  test_planner_roofline.py  test_preconditions.py  test_predict_graph_from_engine.py  test_qualification_fingerprint.py  test_report_snapshot.py  test_restart_port.py  test_run_loop_workload.py  test_runtime_on_trace.py  test_safety_primitives.py  test_scorer.py  test_selection_bias.py  test_serving_latency.py  test_smoke.py  test_tracer_jsonl.py  (+7 more)
(+45 files in other folders)
