[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

# Single source of truth for the version: gitm/__init__.py's __version__.
# pyproject, the wheel metadata, and `gitm doctor` all read from there.
[tool.hatch.version]
path = "gitm/__init__.py"

[project]
name = "gitm-labs"
dynamic = ["version"]
description = "Autonomous GPU kernel optimizer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GITM" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.5"]
# Benchmark layer: HFT Parquet generator (pyarrow) + the LOB harness CPU
# fallback (pandas). On a GPU box the harness runs on cuDF/CuPy instead — those
# install from the RAPIDS channel, not PyPI, so they are not listed here.
bench = ["pyarrow>=15", "pandas>=2.0"]
# The vllm-decode workload. Deliberately NOT folded into [gpu]: vLLM is a heavy
# install that pins its own torch, and both must be built for a CUDA major the
# HOST driver supports — see gitm/cuda_env.py, which checks exactly that.
vllm = ["vllm>=0.6"]
# Full GPU stack for the real HFT path in two commands: cuDF/CuPy (RAPIDS) +
# the CUPTI/runtime wheels the tracer shim links + NVML telemetry + the Parquet
# generator deps. cuDF/CuPy resolve from NVIDIA's index, so install with:
#   pip install --extra-index-url https://pypi.nvidia.com "gitm-labs[gpu]"
# Then `gitm run --workload hft-lob` auto-builds the shim and stages a smoke
# dataset on first run. Linux-only wheels are markered so non-Linux installs
# (e.g. a mac dev box) skip them rather than fail to resolve.
gpu = [
    "cudf-cu12>=24.0; platform_system=='Linux'",
    "cupy-cuda12x>=13.0; platform_system=='Linux'",
    "nvidia-cuda-cupti-cu12; platform_system=='Linux'",
    "nvidia-cuda-runtime-cu12; platform_system=='Linux'",
    "pynvml>=11.5",
    "pyarrow>=15",
    "pandas>=2.0",
]
prometheus = ["prometheus-client>=0.20"]
otlp = ["opentelemetry-sdk>=1.25", "opentelemetry-exporter-otlp>=1.25"]
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.0",  # property-based fuzz tests for the importers (tests/test_importers_hypothesis.py)
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",  # `python -m build` for the wheel-build verification check
    "pre-commit>=3.5",  # local lint/test gate; see .pre-commit-config.yaml
]

[project.scripts]
gitm = "gitm.cli:main"
gitm-run-workload = "gitm.runtime_driver:main"

[tool.hatch.build.targets.wheel]
packages = ["gitm"]

[tool.hatch.build.targets.wheel.force-include]
"gitm/optimizer/templates/report.md.j2" = "gitm/optimizer/templates/report.md.j2"
"gitm/bench/templates/results.md.j2" = "gitm/bench/templates/results.md.j2"
"gitm/tracer/_cupti/cupti_core.h" = "gitm/tracer/_cupti/cupti_core.h"
"gitm/tracer/_cupti/cupti_core.c" = "gitm/tracer/_cupti/cupti_core.c"
"gitm/tracer/_cupti/cupti_shim.c" = "gitm/tracer/_cupti/cupti_shim.c"
"gitm/tracer/_cupti/cupti_inject.c" = "gitm/tracer/_cupti/cupti_inject.c"
"gitm/kernels/library.yaml" = "gitm/kernels/library.yaml"
"gitm/optimizer/templates/headroom_customer.md.j2" = "gitm/optimizer/templates/headroom_customer.md.j2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
